[gd_scene load_steps=10 format=2]

[ext_resource path="res://Assets/start btn smaller.png" type="Texture" id=1]
[ext_resource path="res://src/Scripts/menu text.gd" type="Script" id=2]
[ext_resource path="res://Assets/Buttons/btn_clicked.png" type="Texture" id=3]
[ext_resource path="res://Assets/Buttons/btn_medium.png" type="Texture" id=4]
[ext_resource path="res://Assets/Buttons/btn_easy.png" type="Texture" id=5]
[ext_resource path="res://Assets/Buttons/btn_hard.png" type="Texture" id=6]
[ext_resource path="res://Assets/Buttons/btn_easy_pressed.png" type="Texture" id=7]
[ext_resource path="res://Assets/Buttons/btn_medium_pressed.png" type="Texture" id=8]
[ext_resource path="res://Assets/Buttons/btn_hard_pressed.png" type="Texture" id=9]

[node name="MarginContainer" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer"]
margin_left = 327.0
margin_top = 93.0
margin_right = 697.0
margin_bottom = 158.0
size_flags_horizontal = 6
size_flags_vertical = 6
text = "You are a small creature on a snowy planet.
It's hella cold here and you gotta find a place to warm up. 
Your breath will show you the way.
Find all gems so you can pay a taxi home."
align = 1
valign = 1

[node name="TextureButton" type="TextureButton" parent="VBoxContainer"]
margin_left = 388.0
margin_top = 256.0
margin_right = 635.0
margin_bottom = 349.0
size_flags_horizontal = 4
size_flags_vertical = 2
texture_normal = ExtResource( 1 )
texture_hover = ExtResource( 3 )
stretch_mode = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="VBoxContainer"]
margin_left = 453.0
margin_top = 513.0
margin_right = 570.0
margin_bottom = 527.0
size_flags_horizontal = 4
text = "Choose a difficulty"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 531.0
margin_right = 1024.0
margin_bottom = 600.0

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/HBoxContainer"]
margin_right = 187.0
margin_bottom = 69.0
size_flags_horizontal = 2
size_flags_vertical = 0

[node name="easy_btn" type="TextureButton" parent="VBoxContainer/HBoxContainer/MarginContainer"]
margin_right = 187.0
margin_bottom = 69.0
toggle_mode = true
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 418.0
margin_right = 604.0
margin_bottom = 69.0
size_flags_horizontal = 6

[node name="medium_btn" type="TextureButton" parent="VBoxContainer/HBoxContainer/MarginContainer2"]
margin_right = 186.0
margin_bottom = 69.0
toggle_mode = true
pressed = true
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 8 )

[node name="MarginContainer3" type="MarginContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 839.0
margin_right = 1024.0
margin_bottom = 69.0
size_flags_horizontal = 10

[node name="hard_btn" type="TextureButton" parent="VBoxContainer/HBoxContainer/MarginContainer3"]
margin_right = 185.0
margin_bottom = 69.0
toggle_mode = true
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 9 )

[connection signal="pressed" from="VBoxContainer/TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/MarginContainer/easy_btn" to="." method="_on_easy_btn_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/MarginContainer2/medium_btn" to="." method="_on_medium_btn_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/MarginContainer3/hard_btn" to="." method="_on_hard_btn_pressed"]
